# nu_plugin_tracer

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: main.rs
