[package]
name = "nu_plugin_tracer"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A wrapper to trace Nu plugins"
homepage = "https://github.com/tesujimath/nu_plugin_tracer"
repository = "https://github.com/tesujimath/nu_plugin_tracer"
readme = "README.md"

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "io-util", "io-std", "process", "macros", "fs"] }
anyhow = "1.0.82"
home = "0.5.9"
